--- a/TheLodge_IntelligenceDatabase (1).ipynb
+++ b/TheLodge_IntelligenceDatabase (1).ipynb
@@ -364,7 +364,7 @@
    "source": [
     "# import the class and create classifier/model\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "for j in range(10000000): \n",
+    "for j in range(100): \n",
     "      cv = LeaveOneOut()\n",
     "model = MLPClassifier(hidden_layer_sizes=(100, 50, 101),activation='relu',random_state=101)"
    ]
